# addresses-importer

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Dockerfile-libpostal  README.md  install-libpostal.sh
.github/workflows/: ci.yml
deduplicator/: Cargo.toml  README.md
deduplicator/data/tests/: no_dupes.sql  with_dupes.sql
deduplicator/src/: address.rs  address_hasher.rs  db_hashes.rs  dedupe.rs  deduplicator.rs  main.rs  postal_wrappers.rs  sources.rs  tests.rs  utils.rs
deduplicator/src/data/: france.json
deduplicator/src/data/tests/: db_1.sql
deduplicator/src/lib/: db_hashes.rs  dedupe.rs  deduplicator.rs  mod.rs  sources.rs  tests.rs  utils.rs
importers/bano/: Cargo.toml  README.md
importers/bano/src/: lib.rs  main.rs
importers/openaddresses/: Cargo.toml  README.md  parse_addresses.py
importers/openaddresses/data/: sample.geojson
importers/openaddresses/src/: lib.rs  main.rs
importers/osm/: Cargo.toml  README.md
importers/osm/src/: lib.rs  main.rs
importers/osm/test-files/: osm_input.osm  osm_input.pbf  relations_ways.pbf
tools/: Cargo.toml  README.md
tools/src/: lib.rs  openaddress.rs
