[package]
name = "deduplicator"
version = "0.1.0"
authors = ["Rémi Dupré <r.dupre@qwant.com>"]
edition = "2021"

[[bin]]
name = "deduplicator"
path = "src/bin/main.rs"

[lib]
path = "src/lib/mod.rs"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
crossbeam-channel = "0.5"
csv = "1.1"
geo = "0.26.0"
geojson = { version = "0.24.0", features = ["geo-types"] }
importer_bano = { path = "../importers/bano", package = "bano" }
importer_openaddresses = { path = "../importers/openaddresses", package = "openaddresses" }
importer_osm = { path = "../importers/osm", package = "osm-addresses" }
tools = { path = "../tools" }
itertools = "0.11.0"
libflate = "2.0.0"
libsqlite3-sys = "0.23"
num_cpus = "1.12"
once_cell = "1.3.1"
prog_rs = "0.2"
rpostal = { git = "https://github.com/GuillaumeGomez/libpostal-rs.git" }
rusqlite = "0.26"
structopt = { version = "0.3", default-features = false }

[dev-dependencies]
tempdir = "0.3"
