[package]
name = "openaddresses"
version = "0.1.0"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]
edition = "2018"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
tools = { path = "../../tools" }

[[bin]]
name = "openaddresses"

[lib]
name = "openaddresses"
