[package]
name = "openaddresses"
version = "0.1.0"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]
edition = "2021"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
smartstring = { version = "0.2", features = ["serde"] }
tools = { path = "../../tools" }

[[bin]]
name = "openaddresses"

[lib]
name = "openaddresses"
